--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "FSD assignment2",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "Archana P S",
   "license": "ISC",
